--- a/templates/base/base_generic.html
+++ b/templates/base/base_generic.html
@@ -5,17 +5,18 @@
 
     <title>{% block title %}{% endblock %}</title>
 
+    {% load static %}
+
     {% block css %}
-    <link href="{% static 'css/bootstrap' %}" rel="stylesheet" />
-    <link href="{% static  %}"
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
     {% endblock %}
 </head>
 <body>
-    {% block body %}{% endblock %}
+    {% block content %}{% endblock %}
 
     {% block js %}
-        <script src="{% static 'js/jquery.js' %}"></script>
-        <script src="{% static 'js/bootstrap.js' %}"
+        <script src="{% static 'js/jquery.min.js' %}"></script>
+        <script src="{% static 'js/bootstrap.min.js' %}"
     {% endblock %}
 </body>
 
