--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,7 +1,7 @@
-{% extends "budget/base_site_generic.html" %}
+{% extends "base/base_generic.html" %}
 
 {% block content %}
-
+HI
 {% if forms.errors %}
 <p>Your username and password didn't match. Please try again.</p>
 {% endif %}
