--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,4 +1,4 @@
-{% extends "budget/base_site_generic.html" %}
+{% extends "base/base_generic.html" %}
 {% block content %}
 <h1>The password has been changed!</h1>
 <p><a href="{% url 'login' %}">Log in again</a></p>
