--- a/templates/base/base_generic.html
+++ b/templates/base/base_generic.html
@@ -16,6 +16,7 @@
 
     {% block js %}
         <script src="{% static 'js/jquery.min.js' %}"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
         <script src="{% static 'js/bootstrap.min.js' %}"
     {% endblock %}
 </body>
