--- a/templates/base/base_generic.html
+++ b/templates/base/base_generic.html
@@ -2,6 +2,7 @@
 <html lange="en">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>{% block title %}{% endblock %}</title>
 
@@ -12,6 +13,9 @@
     {% endblock %}
 </head>
 <body>
+    <nav class="navbar navbar-light bg-faded">
+        <a class="navbar-brand" href="#">Test</a>
+    </nav>
     {% block content %}{% endblock %}
 
     {% block js %}
