--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,11 @@
-.sidebar-nav {
-    margin-top: 20px;
-    padding: 0;
-    list-style: none;
+/*.sidebar-nav {*/
+    /*margin-top: 20px;*/
+    /*padding: 0;*/
+    /*list-style: none;*/
+/*}*/
+
+body { padding-top: 70px; }
+
+.navbar-nav > li {
+    list-style-type: none;
 }
