--- a/templates/base/base_generic.html
+++ b/templates/base/base_generic.html
@@ -10,13 +10,41 @@
 
     {% block css %}
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'css/style.css' %}" rel="stylesheet" />
     {% endblock %}
 </head>
 <body>
-    <nav class="navbar navbar-light bg-faded">
-        <a class="navbar-brand" href="#">Test</a>
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="{% url 'index' %}">A</a>
+            </div>
+
+            <div class="navbar-collapse collapse">
+
+                <ul class="nav navbar-nav navbar-right">
+                    {% if user.is_authenticated %}
+
+                    <li><a href="{% url 'logout' %}">Logout</a></li>
+
+                    {% else %}
+
+                     <li><a href="{% url 'login' %}">Login</a></li>
+
+                    {% endif %}
+
+
+                </ul>
+
+                {% if user.is_authenticated %}
+                <p class="navbar-text navbar-right">User: {{user.get_username }}</p>
+                {% endif %}
+            </div>
+        </div>
     </nav>
-    {% block content %}{% endblock %}
+    <div class="container">
+        {% block content %}{% endblock %}
+    </div>
 
     {% block js %}
         <script src="{% static 'js/jquery.min.js' %}"></script>
