--- a/templates/base/base_generic.html
+++ b/templates/base/base_generic.html
@@ -8,6 +8,8 @@
 
     {% load static %}
 
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
     {% block css %}
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
     <link href="{% static 'css/style.css' %}" rel="stylesheet" />
