--- a/budget/templates/budget/view_day.html
+++ b/budget/templates/budget/view_day.html
@@ -2,16 +2,18 @@
 
 {% block content %}
 
-<p><span class="glyphicon glyphicon-off"></span></p>
-<div class="text-center">
-    <h1>{{month}} {{day}}, {{year}}</h1>
-    <button type="button" class="btn btn-default">
-        <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
-    </button>
-    <button type="button" class="btn btn-default" aria-label="Left Align">
-  <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>
-</button>
+    <p><span class="glyphicon glyphicon-off"></span></p>
 
-</div>
+    <div class="text-center">
+        <a href="{% url 'budget:view_prev_day' year month day %}">
+            <i class="fa fa-angle-left" aria-hidden="true"></i>
+        </a>
+        {{month_str}} {{day}}, {{year}}
+        <a href="{% url 'budget:view_next_day' year month day %}">
+            <i class="fa fa-angle-right" aria-hidden="true"></i>
+        </a>
+    </button>
+
+    </div>
 
 {% endblock %}
