--- a/budget/templates/budget/view_day.html
+++ b/budget/templates/budget/view_day.html
@@ -28,7 +28,12 @@
 
     </div>
 
+{% endblock %}
 
-
-
+{% block menuscreen %}
+    <div class="collapse" id="side-menu">
+        <div class="bg-dark p-4">
+            Hello
+        </div>
+    </div>
 {% endblock %}
