--- a/mysite/static/css/style.css
+++ b/mysite/static/css/style.css
@@ -4,4 +4,8 @@
     list-style: none;
 }
 
-body { padding-top: 70px; }
+body { padding-top: 50px; }
+
+.navbar-toggle {
+    background-color: black;
+}
