--- a/templates/base/base_generic.html
+++ b/templates/base/base_generic.html
@@ -8,7 +8,7 @@
 
     {% load static %}
 
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="{% static 'css/font-awesome-4.7.0/css/font-awesome.min.css' %}" rel="stylesheet">
 
     {% block css %}
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
@@ -17,18 +17,21 @@
 </head>
 <body>
     <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     {% block js %}{% endblock %}
 </body>
     {% block menuscreen %}{% endblock %}
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" role="navigation">
         <a class="navbar-brand" href="{% url 'index' %}">A</a>
         <ul class="nav navbar-nav">
             <li class="nav-item">
                 Home
             </li>
+
+            <button class="navbar-toggler pull-xs-right" id="navbarSideButton" type="button">
+                &#9776;
+            </button>
         </ul>
 
         <div class="navbar-collapse collapse justify-content-end">
