--- a/templates/base/base_generic.html
+++ b/templates/base/base_generic.html
@@ -12,7 +12,7 @@
 
     {% block css %}
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
-    <link href="{% static 'css/style.css' %}" rel="stylesheet" />
+    <link href="{% static 'mysite/css/style.css' %}" rel="stylesheet" />
     {% endblock %}
 </head>
 
@@ -21,7 +21,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
-    <script src="{% static 'js/base_generic.js' %}"></script>
+    <script src="{% static 'mysite/js/base_generic.js' %}"></script>
 
     {% block js %}{% endblock %}
 
