--- a/templates/base/base_generic.html
+++ b/templates/base/base_generic.html
@@ -26,7 +26,7 @@
     {% block js %}{% endblock %}
 
     {% block menuscreen %}{% endblock %}
-    <nav class="navbar navbar-light bg-light" role="navigation">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" role="navigation">
         <a class="navbar-brand" href="{% url 'index' %}">A</a>
         <ul class="navbar-nav">
             <li class="nav-item">
