--- a/budget/templates/budget/add.html
+++ b/budget/templates/budget/add.html
@@ -12,7 +12,7 @@
         <div class="col-11">
             <form>
                 <div class="form-group">
-                    <label for="add-type-select">Add Type</label>
+                    <label for="add-type-select">Type</label>
                     <select class="form-control col-sm-2" id="add-type-select">
                         <option>Income</option>
                         <option>Expenditure</option>
