--- a/budget/templates/budget/budget_base_generic.html
+++ b/budget/templates/budget/budget_base_generic.html
@@ -1,5 +1,11 @@
 {% extends 'base/base_generic.html' %}
 
+{% load static %}
+
+{% block head_add %}
+<link rel="stylesheet" type="text/css" href="{% static 'budget/css/style.css' %}" />
+{% endblock %}
+
 {% block body %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light" role="navigation">
         <a class="navbar-brand" href="{% url 'index' %}">A</a>
