--- a/templates/base/base_generic.html
+++ b/templates/base/base_generic.html
@@ -10,12 +10,10 @@
 
     <link href="{% static 'css/font-awesome-4.7.0/css/font-awesome.min.css' %}" rel="stylesheet">
 
-    {% block css %}
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
     <link href="{% static 'mysite/css/style.css' %}" rel="stylesheet" />
-    {% endblock %}
+    {% block head_add %}{% endblock %}
 </head>
-
 <body>
     <script src="{% static 'js/jquery.min.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
