--- a/budget/templates/budget/view_day.html
+++ b/budget/templates/budget/view_day.html
@@ -5,6 +5,7 @@
 {% block js %}
 
 <script type="text/javascript" src="{% static 'budget/js/view_day.js' %}"></script>
+<script type="text/javascript" src="{% static 'budget/js/menu_screen.js' %}"></script>
 
 {% endblock %}
 
@@ -30,13 +31,15 @@
 <div class="center-block menu-option" id="menu-option-div">
     <form>
         <div class="form-group">
-            <label for="add-type-select">Type</label>
-            <select class="form-control col-sm-2" id="add-type-select">
+            <label for="menu-type-select">Type</label>
+            <select class="form-control col-sm-2" id="menu-type-select">
                 <option>Income</option>
                 <option>Expenditure</option>
             </select>
         </div>
     </form>
+
+    <form id="created_menu_form"></form>
 </div>
 
 {% endblock %}
