adding menu screens in prog

--- a/budget/templates/budget/view_day.html
+++ b/budget/templates/budget/view_day.html
@@ -3,6 +3,7 @@
 {% load static %}
 
 {% block js %}
+<script type="text/javascript" src="{% static 'budget/js/helper.js' %}"></script>
 <script type="text/javascript" src="{% static 'budget/js/menu_screen.js' %}"></script>
 <script type="text/javascript" src="{% static 'budget/js/view_day.js' %}"></script>
 {% endblock %}
