use budget_base_generic as base template

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,4 +1,4 @@
-{% extends "base/base_generic.html" %}
+{% extends "budget/budget_base_generic.html" %}
 
 {% block content %}
 {% if forms.errors %}
