--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,4 +1,4 @@
-{% extends "base/base_generic.html" %}
+{% extends "budget/budget_base_generic.html" %}
 {% block content %}
 <p>An email was sent giving instructions for resetting your password.</p>
 {% endblock %}
