test adding add.html

--- a/budget/templates/budget/view_day.html
+++ b/budget/templates/budget/view_day.html
@@ -33,8 +33,8 @@
             <i class="fa fa-angle-right" aria-hidden="true"></i>
         </a>
     </div>
-    <button class="btn btn-default" id="add-button">
-        <i class="fa fa-plus" aria-hidden="true"></i> Add</button>
+    <a class="btn btn-secondary" id="add-button" href="{% url 'budget:add_page' %}" role="button">
+        <i class="fa fa-plus" aria-hidden="true"></i> Add</a>
 </div>
 
 <div class="center-block menu-option" id="menu-option-div"></div>
