submit & cancel buttons + js to go prev page

--- a/budget/templates/budget/add.html
+++ b/budget/templates/budget/add.html
@@ -5,8 +5,15 @@
 <script type="text/javascript" src="{% static 'budget/js/ajax_fun.js' %}"></script>
 <script type="text/javascript" src="{% static 'budget/js/helper.js' %}"></script>
 <script type="text/javascript" src="{% static 'budget/js/menu_screen.js' %}"></script>
-<script type="text/javascript" src="{% static 'budget/js/view_day.js' %}"></script>
+<script type="text/javascript" src="{% static 'budget/js/add/add_page.js' %}"></script>
 {% endblock %}
 
 {% block content %}
+<div class="container">
+    <form id="add-form">
+        <button type="submit" class="btn btn-primary">Save</button>
+        <button type="button" class="btn btn-secondary" id="cancel-button">Cancel</button>
+    </form>
+
+</div>
 {% endblock %}
