html for add-type & amount select

--- a/budget/templates/budget/add.html
+++ b/budget/templates/budget/add.html
@@ -5,15 +5,27 @@
 <script type="text/javascript" src="{% static 'budget/js/ajax_fun.js' %}"></script>
 <script type="text/javascript" src="{% static 'budget/js/helper.js' %}"></script>
 <script type="text/javascript" src="{% static 'budget/js/menu_screen.js' %}"></script>
+<script type="text/javascript" src="{% static 'budget/js/add/add_menus.js' %}"></script>
 <script type="text/javascript" src="{% static 'budget/js/add/add_page.js' %}"></script>
 {% endblock %}
 
 {% block content %}
 <div class="container">
-    <form id="add-form">
+    <h2>Adding Income/Expenditure</h2>
+    <form id="add-form" method="{% url 'budget:add' %}" method="POST">
+        <div class="form-group">
+            <div class="btn-group" data-toggle="buttons">
+                <label class="btn btn-secondary active">
+                    <input type="radio" name="add-type-options" autocomplete="off" checked> Income
+                </label>
+                <label class="btn btn-secondary">
+                    <input type="radio" name="add-type-options" autocomplete="off"> Expenditure
+                </label>
+            </div>
+        </div>
+        <div id="add-menu-container"></div>
         <button type="submit" class="btn btn-primary">Save</button>
         <button type="button" class="btn btn-secondary" id="cancel-button">Cancel</button>
     </form>
-
 </div>
 {% endblock %}
