function to set menu, to add amount_input

--- a/budget/templates/budget/add.html
+++ b/budget/templates/budget/add.html
@@ -16,10 +16,10 @@
         <div class="form-group">
             <div class="btn-group" data-toggle="buttons">
                 <label class="btn btn-secondary active">
-                    <input type="radio" name="add-type-options" autocomplete="off" checked> Income
+                    <input type="radio" name="add-type-options" autocomplete="off" checked value="income"> Income
                 </label>
                 <label class="btn btn-secondary">
-                    <input type="radio" name="add-type-options" autocomplete="off"> Expenditure
+                    <input type="radio" name="add-type-options" autocomplete="off" value="expenditure"> Expenditure
                 </label>
             </div>
         </div>
