start side navbar

--- a/budget/templates/budget/view_balance.html
+++ b/budget/templates/budget/view_balance.html
@@ -20,7 +20,7 @@
 
 <link rel="stylesheet" type="text/css" href="{% static 'budget/css/view_day.css' %}" />
 
-<div class="container">
+<div>
     <p><span class="glyphicon glyphicon-off"></span></p>
 
     <div class="text-center">
