--- a/budget/templates/budget/budget_base_generic.html
+++ b/budget/templates/budget/budget_base_generic.html
@@ -4,6 +4,7 @@
 
 {% block head_add %}
 <link rel="stylesheet" type="text/css" href="{% static 'budget/css/style.css' %}" />
+<script type="text/javascript" src="{% static 'budget/js/budget_base.js' %}"></script>
 {% endblock %}
 
 {% block body %}
@@ -29,7 +30,7 @@
 
         <div class="justify-content-end">
             <button class="btn pull-xs-right" id="navbarSideButton" type="button">
-            <i class="fa fa-bars" aria-hidden="true"></i>
+                <i class="fa fa-bars" aria-hidden="true"></i>
             </button>
         </div>
 
@@ -44,7 +45,9 @@
 
 <div class="container-fluid">
     <div class="row">
-        <nav class="col-sm-3 col-md-2 sidebar"></nav>
+        <nav class="col-sm-3 col-md-2 sidebar">
+            <ul class="nav" id="accounts-ul"></ul>
+        </nav>
         <main role="main" class="col-sm-9 ml-sm-auto col-md-10">
             {% block content %}{% endblock %}
         </main>
