redirect to budget_data.add_balance (renamed)

--- a/budget/templates/budget/add.html
+++ b/budget/templates/budget/add.html
@@ -17,7 +17,7 @@
 
 <div class="container">
     <h2>Adding Income/Expenditure</h2>
-    <form id="add-form" action="{% url 'budget:add' %}" method="POST">
+    <form id="add-form" action="{% url 'budget:add_balance' %}" method="POST">
         <div class="form-group">
             <div class="btn-group" data-toggle="buttons">
                 <label class="btn btn-secondary active">
