corrected namespace (changed prev)

--- a/budget/templates/budget/view_balance.html
+++ b/budget/templates/budget/view_balance.html
@@ -13,7 +13,7 @@
 
 {% csrf_token %}
 <script type="text/javascript">
-    var add_url = "{% url 'budget:add' %}";
+    var add_url = "{% url 'budget:add_page' %}";
     var csrftoken = jQuery("[name=csrfmiddlewaretoken]").val();
 </script>
 
