--- a/checktasks/templates/checktasks/view.html
+++ b/checktasks/templates/checktasks/view.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block content %}
-<button type="button" class="btn btn-primary">
+<button type="button" class="btn btn-primary" id="add-btn">
     <i class="fa fa-plus" aria-hidden="true"></i> Add
 </button>
 {% endblock %}
