--- a/static/mysite/css/style.css
+++ b/static/mysite/css/style.css
@@ -54,9 +54,10 @@
 }
 
 .menu-option {
-    position: absolute;
+    width: 40%;
+    position: relative;
+    text-align: center;
     top: 50%;
-    left: 50%;
     background-color: #f7f7f9;
     z-index: 1050;
     border: 2px solid #ccc;
