--- a/checktasks/templates/checktasks/view.html
+++ b/checktasks/templates/checktasks/view.html
@@ -4,6 +4,7 @@
 
 {% block js %}
 <script type="text/javascript" src="{% static 'checktasks/js/view.js' %}"></script>
+<script type="text/javascript" src="{% static 'checktasks/js/tasks.js' %}"></script>
 
 <script type="text/javascript">
     var add_url = "{% url 'checktasks:add' %}";
