--- a/checktasks/templates/checktasks/view.html
+++ b/checktasks/templates/checktasks/view.html
@@ -18,9 +18,16 @@
     <i class="fa fa-plus" aria-hidden="true"></i> Add
 </button>
 
-{% for task in tasks %}
-<div>{{ task.name }}</div>
-{% endfor %}
+<table>
+    <tbody>
+        {% for task in tasks %}
+        <tr>
+            <th>{{ task.name }}</th>
+        </tr>
+        {% endfor %}
+    </tbody>
+</table>
+
 
 <div class="center-block menu-option" id="menu-option-div"></div>
 {% endblock %}
