disable side nav

--- a/templates/base/base_generic.html
+++ b/templates/base/base_generic.html
@@ -60,9 +60,9 @@
     <div class="overlay"></div>
     <div class="container-fluid">
         <div class="row">
-            <nav class="col-sm-3 col-md-2 sidebar">
-                <ul class="nav" id="accounts-ul"></ul>
-            </nav>
+            <!--<nav class="col-sm-3 col-md-2 sidebar">-->
+                <!--<ul class="nav" id="accounts-ul"></ul>-->
+            <!--</nav>-->
             <main role="main" class="col-sm-9 ml-sm-auto col-md-10">
                 {% block content %}{% endblock %}
             </main>
