--- a/templates/base/base_generic.html
+++ b/templates/base/base_generic.html
@@ -26,7 +26,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light" role="navigation">
             <a class="navbar-brand" href="{% url 'index' %}">A</a>
-            <ul class="navbar-nav nav">
+            <ul class="nav mr-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'index' %}">Home</a>
                 </li>
