--- a/checktasks/templates/checktasks/view.html
+++ b/checktasks/templates/checktasks/view.html
@@ -11,6 +11,8 @@
 <script type="text/javascript">
     var add_url = "{% url 'checktasks:add' %}";
     var csrftoken = jQuery("[name=csrfmiddlewaretoken]").val();
+
+    var get_tasksAjax_url = "{% url 'checktasks:ajax_tasks' %}";
 </script>
 {% endblock %}
 
@@ -19,15 +21,16 @@
     <i class="fa fa-plus" aria-hidden="true"></i> Add
 </button>
 
-<table>
-    <tbody>
-        {% for task in tasks %}
-        <tr>
-            <th>{{ task.name }}</th>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+<div id="tasks-div"></div>
+<!--<table>-->
+    <!--<tbody>-->
+        <!--{% for task in tasks %}-->
+        <!--<tr>-->
+            <!--<th>{{ task.name }}</th>-->
+        <!--</tr>-->
+        <!--{% endfor %}-->
+    <!--</tbody>-->
+<!--</table>-->
 
 
 <div class="center-block menu-option" id="menu-option-div"></div>
