--- a/templates/base/base_generic.html
+++ b/templates/base/base_generic.html
@@ -58,17 +58,9 @@
     </header>
 
     <div class="overlay"></div>
-    <div class="container-fluid">
-        <div class="row">
-            <!--<nav class="col-sm-3 col-md-2 sidebar">-->
-                <!--<ul class="nav" id="accounts-ul"></ul>-->
-            <!--</nav>-->
-            <main role="main" class="col-sm-9 ml-sm-auto col-md-10">
+            <main role="main" class="">
                 {% block content %}{% endblock %}
             </main>
-
-        </div>
-    </div>
 
     {% block body %}{% endblock %}
 
