--- a/checktasks/templates/checktasks/view.html
+++ b/checktasks/templates/checktasks/view.html
@@ -14,7 +14,8 @@
     var add_url = "{% url 'checktasks:add' %}";
     var csrftoken = jQuery("[name=csrfmiddlewaretoken]").val();
 
-    var get_tasksAjax_url = "{% url 'checktasks:ajax_tasks' %}";
+    var get_tasksAjax_url = "{% url 'checktasks:ajax_tasks' %}",
+        click_ajax_url = "{% url 'checktasks:click_task_ajax' %}";
 </script>
 {% endblock %}
 
