add edit link + create menu.js

--- a/checktasks/templates/checktasks/view.html
+++ b/checktasks/templates/checktasks/view.html
@@ -4,6 +4,7 @@
 
 {% block js %}
 {% csrf_token %}
+<script type="text/javascript" src="{% static 'checktasks/js/menu.js' %}"></script>
 <script type="text/javascript" src="{% static 'checktasks/js/tasks.js' %}"></script>
 <script type="text/javascript" src="{% static 'checktasks/js/helper.js' %}"></script>
 <script type="text/javascript" src="{% static 'checktasks/js/view.js' %}"></script>
