consolidated menus to menu obj + started edit_menu

--- a/checktasks/templates/checktasks/view.html
+++ b/checktasks/templates/checktasks/view.html
@@ -18,7 +18,8 @@
 
     var get_tasksAjax_url = "{% url 'checktasks:ajax_tasks' %}",
         click_ajax_url = "{% url 'checktasks:click_task_ajax' %}",
-        del_url = "{% url 'checktasks:del_task_ajax' %}";
+        del_url = "{% url 'checktasks:del_task_ajax' %}",
+        edit_url = "{% url 'checktasks:edit_task_ajax' %}";
 </script>
 {% endblock %}
 
