--- a/checktasks/templates/checktasks/checktasks_base.html
+++ b/checktasks/templates/checktasks/checktasks_base.html
@@ -1,3 +1,69 @@
-{% extends 'base/base_generic.html' %}
+<!DOCTYPE html>
+<html lange="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-{% load static %}
+    <title>{% block title %}{% endblock %}</title>
+
+    {% load static %}
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link href="{% static 'mysite/css/style.css' %}" rel="stylesheet" />
+    {% block head_add %}{% endblock %}
+</head>
+<body>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+
+    <script src="{% static 'mysite/js/base_generic.js' %}"></script>
+
+    {% block js %}{% endblock %}
+
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light" role="navigation">
+            <a class="navbar-brand" href="{% url 'index' %}">A</a>
+            <ul class="nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'index' %}">Home</a>
+                </li>
+
+                {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logout' %}">Logout (User: {{user.get_username}})</a>
+                </li>
+                {% else %}
+                 <li class="nav-item">
+                     <a class="nav-link" href="{% url 'login' %}">Login</a>
+                 </li>
+                {% endif %}
+
+            </ul>
+
+            <div class="justify-content-end">
+                <button class="btn pull-xs-right" id="navbarSideButton" type="button">
+                    <i class="fa fa-bars" aria-hidden="true"></i>
+                </button>
+            </div>
+
+            <ul class="navbar-side" id="navbarSide">
+                <li class="navbar-side-item">
+                    <a href="#" class="side-link">Signup</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <div class="overlay"></div>
+            <main role="main" class="">
+                {% block content %}{% endblock %}
+            </main>
+
+    {% block body %}{% endblock %}
+
+</body>
+
+</html>
