--- a/mysite/templates/mysite/index.html
+++ b/mysite/templates/mysite/index.html
@@ -7,6 +7,8 @@
 <ul>
     <li><a href="{% url 'budget:index' %}">Budget</a></li>
     <li><a href="{% url 'checktasks:main' %}">CheckTasks</a></li>
+    <li><a href="{% url 'rcv_list:index' %}">RCV List</a></li>
+    <li><a href="{% url 'warehouse_viewer:index' %}">CheckTasks</a></li>
 </ul>
 
 {% endblock %}
