--- a/warehouse_map/warehouse_viewer/static/warehouse_viewer/css/viewer.css
+++ b/warehouse_map/warehouse_viewer/static/warehouse_viewer/css/viewer.css
@@ -118,5 +118,9 @@ td {
     cursor: pointer;
     background-color: #ccc;
     opacity: 0.6;
-    z-index: 1040;
+    z-index: 1010;
+}
+
+button:hover {
+    cursor: pointer;
 }
